Fixed Icon Button Alignement

--- a/force-app/main/default/lwc/esLookup/esLookup.css
+++ b/force-app/main/default/lwc/esLookup/esLookup.css
@@ -1,14 +1,25 @@
 .icon-btn {
-  margin: 20px 0 0 0.5rem;
+  margin-left: 8px;
+  top: 0;
+}
+.icon-btn-container {
+  align-items: center;
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 30px;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .lookup-container {
+  position: relative;
+  align-items: center;
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: flex-start;
 }
 
 .custom-lookup {
-  width: 100%;
+  width: calc(100% - 48px);
 }
